--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,8 +1,6 @@
 #main-content{
+  position: relative;
   margin: 0 auto;
-  img{
-    transition: all .3333s ease-in-out;
-  }
 }
 
 #images{
